--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,16 +1,18 @@
-:root
-{
---achtergrondKleurBody: #54bdbd;
---achtergrondKleurHeaderEnFooterHome: #e0efef;
---tekstKleur: white;
+:root {
+    --achtergrondKleurBody: #54bdbd;
+    --achtergrondKleurHeaderEnFooterHome: #e0efef;
+    --tekstKleur: white;
 }
 
-body.homepage
-{
-background-color: var(--achtergrondKleurBody);
+body.homepage {
+    background-color: var(--achtergrondKleurBody);
 }
 
-header.homepage, footer.homepage
-{
- background-color: var(--achtergrondKleurHeaderEnFooterHome);
+header.homepage,
+footer.homepage {
+    background-color: var(--achtergrondKleurHeaderEnFooterHome);
+}
+
+h1.homepage {
+    color: var(--tekstKleur)
 }
