--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,7 @@ h4.mandenPage {
     font-family: "Balsamiq Sans", sans-serif;
 }
 
-p.mandenPage{
+p.mandenPage {
     font-size: small;
 }
 
@@ -52,6 +52,7 @@ p.mandenPage{
 img.homepage {
     display: inline;
     width: 15%;
+    margin: 0.5%
 }
 
 div.mandenPage {
@@ -64,6 +65,6 @@ div.mandenPage {
 
 div.accordion-item,
 .accordion-header,
-.accordion-button{
-    border: 1.5px solid var(--borderKleurBuiten) !important  
+.accordion-button {
+    border: 1.5px solid var(--borderKleurBuiten) !important
 }
