--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,7 +46,7 @@ h2.FAQPage {
 }
 
 p.mandenPage,
-li.mandenPage,
+ol.mandenPage,
 h4.mandenPage {
     font-family: "Balsamiq Sans", sans-serif;
 }
